# hachimi-tui

./: .gitignore  Cargo.toml  README.md
crates/hachimi-tui/: Cargo.toml
crates/hachimi-tui/src/: app.rs  main.rs  model.rs
crates/hachimi-tui/src/api/: README.md  client.rs  endpoints.rs
crates/hachimi-tui/src/app/: README.md  actions.rs  event.rs  mod.rs  render.rs
crates/hachimi-tui/src/config/: README.md  auth_store.rs  paths.rs  settings.rs
crates/hachimi-tui/src/model/: auth.rs  playlist.rs  queue.rs  song.rs  user.rs
crates/hachimi-tui/src/player/: README.md  engine.rs  queue.rs
crates/hachimi-tui/src/ui/: README.md  constants.rs  help.rs  i18n.rs  log_view.rs  login.rs  miller.rs  mod.rs  navigation.rs  player_bar.rs  player_view.rs  settings_view.rs  theme.rs  util.rs
docs/: REFACTOR.md  REQUIREMENTS.md
hachimi-core/: Cargo.toml
hachimi-core/src/: client.rs  endpoints.rs  lib.rs
hachimi-core/src/model/: mod.rs  song.rs
hachimi-tui/: Cargo.toml
hachimi-tui/src/: main.rs  model.rs
hachimi-tui/src/app/: actions.rs  mod.rs
hachimi-tui/src/config/: auth_store.rs  mod.rs  paths.rs
hachimi-tui/src/ui/: README.md  lyrics.rs
mambocore/: Cargo.toml
mambocore/src/: client.rs  endpoints.rs  lib.rs
mambocore/src/model/: auth.rs  playlist.rs
tokaitui/: Cargo.toml
tokaitui/src/: model.rs
tokaitui/src/app/: README.md  actions.rs  event.rs  mod.rs  render.rs
tokaitui/src/app/actions/: auth.rs  cover.rs  data.rs  mod.rs  navigation.rs  playback.rs
tokaitui/src/config/: auth_store.rs  paths.rs  settings.rs
tokaitui/src/model/: README.md  queue.rs
tokaitui/src/player/: README.md  engine.rs  queue.rs
tokaitui/src/ui/: README.md  constants.rs  cover_widget.rs  format.rs  help.rs  i18n.rs  kitty.rs  login.rs  miller.rs  mod.rs  player_bar.rs  player_view.rs  preview.rs  settings_view.rs  util.rs
