[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
# TUI
ratatui = "0.29"
crossterm = "0.28"
ratatui-image = "3"
image = "0.25"

# Async
tokio = { version = "1", features = ["full"] }

# HTTP
reqwest = { version = "0.12", features = ["json", "stream", "gzip"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Audio
rodio = { version = "0.20", features = ["symphonia-all"] }

# Utilities
rand = "0.9"
anyhow = "1"
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
open = "5"
unicode-width = "0.2"
