[workspace]
members = ["mambocore", "tokaitui"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
# TUI
ratatui = "0.29"
crossterm = "0.28"
ratatui-image = { version = "3", default-features = false }
image = { version = "0.25", default-features = false, features = ["webp"] }

# Async
tokio = { version = "1", features = ["full"] }

# HTTP
reqwest = { version = "0.12", features = ["json", "stream", "gzip"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Audio
rodio = { version = "0.20", default-features = false, features = [
    "symphonia-mp3",
    "symphonia-aac",
    "symphonia-flac",
    "symphonia-vorbis",
    "symphonia-isomp4",
    "symphonia-wav",
] }

# Utilities
rand = "0.9"
anyhow = "1"
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
open = "5"
unicode-width = "0.2"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
