[workspace]
members = ["mambocore", "tokaitui"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
# TUI
ratatui = "0.30"
crossterm = "0.29"
ratatui-image = { version = "10", default-features = false }
image = { version = "0.25", default-features = false, features = ["webp"] }

# Async
tokio = { version = "1", features = ["full"] }

# HTTP
reqwest = { version = "0.13", default-features = false, features = [
    "json", "query", "stream", "gzip", "native-tls",
] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.0"

# Audio
rodio = { version = "0.21", default-features = false, features = [
    "playback",
    "symphonia-mp3",
] }

# Utilities
rand = "0.10"
anyhow = "1"
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
open = "5"
unicode-width = "0.2"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
