[package]
name = "tokaitui"
version.workspace = true
edition.workspace = true

[dependencies]
mambocore = { path = "../mambocore" }
ratatui.workspace = true
crossterm.workspace = true
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
rodio.workspace = true
rand.workspace = true
anyhow.workspace = true
dirs.workspace = true
chrono.workspace = true
open.workspace = true
unicode-width.workspace = true
image.workspace = true
base64.workspace = true
flate2.workspace = true
